# 403xBypass

./: 403x.py  README.md  pyproject.toml  setup.py
403x/: __init__.py  cli.py  core.py
40xbypass/: 403x.py
40xbypass/403x/: output.py
